--- a/src/app/component/instrument-edit/instrument-edit.component.html
+++ b/src/app/component/instrument-edit/instrument-edit.component.html
@@ -14,5 +14,6 @@
     </div>
 
     <button class="btn btn-success">Update</button>
+    <button class="btn btn-cancel" (click)="onCancel()" (keyup.esc)="onCancel()">Cancel</button>
   </form>
 </div>
